<resources>
    <string name="app_name">eMovie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_next_releases">Próximos estrenos</string>
    <!-- TODO: Detail Movie -->
    <string name="title_movie">Her</string>
    <string name="play_movie">Ver trailer</string>
    <string name="date">2013</string>
    <string name="in">en</string>
    <string name="start_count">8.0</string>
    <string name="category_movie">Heartfelt Romance Sci-fi Drama</string>
    <string name="description_movie_title">MOVIE PLOT</string>
    <string name="description_movie">In a near future, a lonely writer develops an unlikely relationship with an operating system designed to meet his every need.</string>
    <string name="not_description">We dont have description</string>

    Heartfelt
    <!-- TODO: trend Movie -->
    <string name="trend">Tendencia</string>
    <string name="recommended">Recomendados para ti</string>
    <string name="spanish">En español</string>
    <string name="lanced">Lanzadas en 1993</string>
    <string name="image_generic">image_generic</string>
    <string name="error">Oops algo salío mal, no encontramos películas para este género</string>


</resources>