<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.DetailMovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_generic"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/image_default" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_detail">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="38dp"
                android:background="@color/color_transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/title_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/connector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/title_movie" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottomPlayVideo"
                style="@style/button_transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins"
                android:text="@string/play_movie"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/description_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/connector"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/connector"
                tools:text="@string/date" />

            <TextView
                android:id="@+id/connector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/in"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/category_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/yellow"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_star_rate_24"
                app:layout_constraintBottom_toBottomOf="@id/connector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/connector"
                app:layout_constraintTop_toTopOf="@id/connector"
                tools:text="@string/start_count" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins"
                android:lineSpacingExtra="3dp"
                android:text="@string/description_movie_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins"
                android:lineSpacingExtra="3dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/description_movie" />

            <TextView
                android:id="@+id/category_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="19dp"
                android:fontFamily="@font/poppins"
                android:lineSpacingExtra="3dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/bottomPlayVideo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/category_movie" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <include
            android:id="@+id/videoinapp"
            layout="@layout/fragment_play_trailer_movie" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
