<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image_header"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_image_splash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_next_releases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/title_next_releases"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_next_releases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_next_releases"
                app:layout_constraintBottom_toTopOf="@+id/title_trend"
                tools:itemCount="5"
                tools:listitem="@layout/item_movie" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_error_next_releases"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:text="@string/error"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_next_releases"
                app:layout_constraintBottom_toTopOf="@+id/title_trend" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_trend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins"
                android:text="@string/trend"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView_next_releases"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView_trend"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_trend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/title_recommended"
                tools:itemCount="5"
                tools:listitem="@layout/item_movie" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_error_trend"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/error"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_trend"
                app:layout_constraintBottom_toTopOf="@+id/title_recommended" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_recommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/poppins"
                android:text="@string/recommended"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/filter_idiom"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/filter_idiom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/spanish"
                android:padding="5dp"
                style="@style/button_select"
                app:layout_constraintTop_toBottomOf="@id/title_recommended"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/filter_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/lanced"
                android:padding="5dp"
                style="@style/button_transparent"
                app:layout_constraintStart_toEndOf="@+id/filter_idiom"
                app:layout_constraintTop_toBottomOf="@id/title_recommended" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_date"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:itemCount="2"
                tools:listitem="@layout/item_movie_for_grit" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_error_filter"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/error"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_date"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>